# BatterySimulationGUI

./: CMakeLists.txt  README.md
include/: Battery.h  BatteryCanvas.h  BatteryPack.h  MainWindow.h
src/: Battery.cpp  BatteryCanvas.cpp  BatteryPack.cpp  Batterypack.cpp  MainWindow.cpp  main.cpp
